# badge_connect_bin

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  idf_component.yml
examples/send_int/: CMakeLists.txt
examples/send_int/main/: CMakeLists.txt  send_int.c
examples/send_string/: CMakeLists.txt
examples/send_string/main/: CMakeLists.txt  send_string.c
examples/send_struct/: CMakeLists.txt
examples/send_struct/main/: CMakeLists.txt  send_struct.c
include/: badge_connect.h
